--- a/main.html
+++ b/main.html
@@ -10,12 +10,12 @@
 	 <ul>
         <li>
             <a href="https://en.wikipedia.org/wiki/Golden_Retriever" target="_blank">
-                <img src="Golden_Retriever_img_link" alt="Golden Retriever" width="300">
+                <img src="Golden_Retriever_img_link" alt="Golden Retriever">
             </a>
         </li>
         <li>
             <a href="https://en.wikipedia.org/wiki/Poodle" target="_blank">
-                <img src="Poodle_img_link" alt="Poodle" width="300">
+                <img src="Poodle_img_link" alt="Poodle">
             </a>
         </li>
     </ul>
