--- a/main.html
+++ b/main.html
@@ -10,12 +10,12 @@
 	 <ul>
         <li>
             <a href="https://en.wikipedia.org/wiki/Golden_Retriever" target="_blank">
-                <img src="Golden_Retriever_img_link" alt="Golden Retriever">
-            </a>
+                <img src="https://upload.wikimedia.org/wikipedia/commons/c/cf/BassetHound_profil.jpg" alt="Golden Retriever">
+            </a>	
         </li>
         <li>
             <a href="https://en.wikipedia.org/wiki/Poodle" target="_blank">
-                <img src="Poodle_img_link" alt="Poodle">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/Full_attention_%288067543690%29.jpg/1280px-Full_attention_%288067543690%29.jpg" alt="Poodle">
             </a>
         </li>
     </ul>
